Kevin modifico apartado

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -32,7 +32,7 @@
           <div class="card border-0">
             <img src="img/Noticias/noticiasstrabajo.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Servicio social por experiencia laboral.</h5>
+              <h5 class="card-title">Servicio social.</h5>
               <p class="card-text">Se abrirá una nueva campaña con éxito estudiantil para una nueva modalidad de liberación de Servicio social por experiencia laboral. Consiste en tomar en cuenta los últimos 6 meses de trabajo (en una empresa pública o privada) para poder liberar el servicio social. </p>
             </div>
           </div>
