--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -114,7 +114,7 @@
 
                         <div class="col">
                           <strong>Manuales de validación</strong></br>
-                          <a class="Botonmanual row py-3 px-3" href="Validar_curp.pdf" target="_blank">¿Como validar un
+                          <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_curp.pdf" target="_blank">¿Como validar un
                             Curp?</a>
                           <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf" target="_blank">¿Como
                             validar un acta de nacimiento?</a>
