--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -41,7 +41,7 @@
           </p>
 
           <button class="Botonmanual py-3 text-center border-0" onclick="copiarAlPortapapeles('SERSO')">Copiar</button>
-          <a class="Botonmanual py-3 text-center border-0" href="docs/speechserviciosocial.pdf" target="_blank">Speach servicio social</a>
+          <a class="Botonmanual py-3 text-center border-0" href="docs/manualesss/speechserviciosocial.pdf" target="_blank">Speach servicio social</a>
 
           <script>
             function copiarAlPortapapeles(id_elemento) {
@@ -288,7 +288,6 @@
 
                     <strong class="py-3 px-3"> Caracteristicas de la carta de aceptación</strong>
 
-                    <p>La carta de aceptación tiene que </p>
                     La carta de aceptación es un formato que tiene que complementar el alumno y la
                     institución; El documento tiene que estar firmado, membretado o/y sellado por la institución. <br />
                     <br />
@@ -360,7 +359,7 @@
 
                   <div class="col card border border-0">
 
-                    <strong class="py-3 px-3"> Caracteristicas de la carta de aceptación</strong>
+                    <strong class="py-3 px-3"> Caracteristicas del reporte global de actividades</strong>
 
                     <p>
 
@@ -735,122 +734,6 @@
           Ley.
         </div>
 
-        <!--Formatos Art 52-->
-        <div class="container my-3 mx-3">
-
-
-          Formatos </br>
-          <div class="row row-cols-xl-1 row-cols-xl-4 row-cols-md-4">
-
-            <!--Reporte global de actividades-->
-            <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas"
-              data-bs-target="#offcanvasBottom3" aria-controls="offcanvasBottom"><img style="height: 200px"
-                src="img/serviciosocial/reporteglobal.png"></i></button>
-
-            <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom3"
-              aria-labelledby="offcanvasBottomLabel">
-              <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasBottomLabel3">Reporte global de actividades</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-              </div>
-              <div class="container card border border-0">
-
-                <div class="row row-cols-1 row-cols-xl-2 row-cols-md-2">
-
-                  <div class="col">
-
-
-                    <div id="carousel3" class="carousel carousel-ejemplo slide">
-                      <div class="carousel-inner carousel-inner-ejemplo">
-                        <div class="carousel-item active">
-                          Formato
-                          <img src="img/serviciosocial/reporteglobal.PNG" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                          Ejemplo
-                          <img src="img/serviciosocial/reporteglobal-ejemplo.PNG" class="d-block w-100" alt="...">
-                        </div>
-                      </div>
-                      <button class="carousel-control-prev" type="button" data-bs-target="#carousel3"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                      </button>
-                      <button class="carousel-control-next" type="button" data-bs-target="#carousel3"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                      </button>
-                    </div>
-
-                  </div>
-
-                  <div class="col card border border-0">
-
-                    <strong class="py-3 px-3"> Caracteristicas del reporte global</strong>
-
-
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <!--Constancia de termino-->
-            <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas"
-              data-bs-target="#offcanvasBottom4" aria-controls="offcanvasBottom"><img style="height: 200px"
-                src="img/serviciosocial/constanciadet.png"></i></button>
-
-            <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom4"
-              aria-labelledby="offcanvasBottomLabel">
-              <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasBottomLabel4">Constacia de terminación</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-              </div>
-              <div class="container card border border-0">
-
-                <div class="row row-cols-1 row-cols-xl-2 row-cols-md-2">
-
-                  <div class="col">
-
-
-                    <div id="carousel4" class="carousel carousel-ejemplo slide">
-                      <div class="carousel-inner carousel-inner-ejemplo">
-                        <div class="carousel-item active">
-                          Formato
-                          <img src="img/serviciosocial/constanciadet.png" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                          Ejemplo
-                          <img src="img/serviciosocial/constanciadet-ejemplo.png" class="d-block w-100" alt="...">
-                        </div>
-                      </div>
-                      <button class="carousel-control-prev" type="button" data-bs-target="#carousel4"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                      </button>
-                      <button class="carousel-control-next" type="button" data-bs-target="#carousel4"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                      </button>
-                    </div>
-
-                  </div>
-
-                  <div class="col card border border-0">
-
-                    <strong class="py-3 px-3"> Caracteristicas de la constancia de terminación</strong>
-
-
-                  </div>
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div>
-
       </div>
     </div>
 
@@ -953,8 +836,7 @@
             <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottomSolicitudTrabajo"
               aria-labelledby="offcanvasBottomLabel">
               <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="#offcanvasBottomlabelSolicitudTrabajo">Carta de aceptación para trabajo
-                  colaborativo</h5>
+                <h5 class="offcanvas-title" id="#offcanvasBottomlabelSolicitudTrabajo">Solicitud Servicio Social</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
               </div>
 
@@ -992,9 +874,8 @@
 
                   <div class="col card border border-0">
 
-                    <strong class="py-3 px-3"> Carta de aceptación para trabajo colaborativo </strong>
-                    <p>La carta de aceptación tiene que </p>
-                    La carta de aceptación es un formato que tiene que complementar el alumno y la
+                    <strong class="py-3 px-3">Solicitud Servicio Social </strong>
+                    La solicitud de trabajo colavorativo es un formato que tiene que complementar el alumno y la
                     institución; El documento tiene que estar firmado, membretado o/y sellado por la institución. <br />
                     <br />
 
@@ -1063,26 +944,27 @@
 
                   <div class="col card border border-0">
 
-                    <strong class="py-3 px-3"> Carta de aceptación para trabajo colaborativo </strong>
-                    <p>La carta de aceptación tiene que </p>
-                    La carta de aceptación es un formato que tiene que complementar el alumno y la
-                    institución; El documento tiene que estar firmado, membretado o/y sellado por la institución. <br />
-                    <br />
+                    <strong class="py-3 px-3">Reporte global para trabajo colaborativo</strong>
+                    <p>
 
-                    1.-Nombre completo. <br />
+                      El reporte global de actividades es un formato que tiene que complementar el alumno y la
+                      institución; El documento tiene que estar firmado, membretado o/y sellado por la institución.
+                      <br /> <br />
+                      Las fecha de inicio tiene que coincidir con la carta de aceptación y la checa de termino con la
+                      constancia de termino.
+                      <br /><br />
 
-                    2.-Matricula. <br />
+                      1.-Datos del estudiante. <br />
 
-                    3.-Licenciatura que cursa. <br />
+                      2.-Datos de la institución; fecha de inicio y de término <br />
 
-                    4.-Intitución. <br />
+                      3.-Actividades. <br />
 
-                    5.-Indicar trabajo colaborativo<br />
+                      4.-Desarrollo profecional del alumno. <br />
 
-                    6.-Fecha de inicio del servicio social. <br />
+                      5.-Firma. <br />
 
-                    7.-Firma.
-
+                    </p>
                   </div>
                 </div>
               </div>
@@ -1110,11 +992,11 @@
                       <div class="carousel-inner carousel-inner-ejemplo">
                         <div class="carousel-item active">
                           Formato
-                          <img src="img/serviciosocial/trabajocolaorativo/reporteglobaltrabajo.png " class="d-block w-100" alt="...">
+                          <img src="img/serviciosocial/trabajocolaorativo/constanciadettrabajo.png " class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
                           Ejemplo
-                          <img src="img/serviciosocial/trabajocolaorativo/carta-aceptacion-publica-ejemplo.PNG" class="d-block w-100"
+                          <img src="img/serviciosocial/trabajocolaorativo/constanciadettrabajo.png" class="d-block w-100"
                             alt="...">
                         </div>
                       </div>
@@ -1135,7 +1017,7 @@
                   <div class="col card border border-0">
 
                     <strong class="py-3 px-3"> Carta de aceptación para trabajo colaborativo </strong>
-                    <p>La carta de aceptación tiene que </p>
+                    
                     La carta de aceptación es un formato que tiene que complementar el alumno y la
                     institución; El documento tiene que estar firmado, membretado o/y sellado por la institución. <br />
                     <br />
