--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -14,7 +14,7 @@
           <div class="col"><li class="li activo" id="menuCertificacion">Certificación</li></div>
           <div class="col"><li class="li noactivo" id="menuTitulacion">Titulación</li></div>
           <div class="col"><li class="li noactivo" id="menuTitulacionLatam">Titulación LATAM</li></div>
-          <div class="col"><li class="li noactivo" id="menuTituloInt">Titulo intermedio</li></div>
+          <div class="col"><li class="li noactivo" id="menuTituloInt">Diploma intermedio</li></div>
           <div class="col"><li class="li noactivo" id="menuCertificadoPar">Certificado parcial</li></div>
           </div>
       </ul>
@@ -153,7 +153,6 @@
                                 <b>Certificado de programa academico -CPA</b>: En caso SUNEDU lo exija</br> 
                                 <a href="https://www.sunedu.gob.pe/presentar-solicitud-reconocimiento-grados-titulos-forma-virtual/" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
                               </p>
-                              
                             </div>
                           </div>
 
@@ -167,7 +166,6 @@
                                 <b>Certificado de programa academico -CPA</b>: SI</br> 
                                 <a href="https://www.mineducacion.gov.co/1759/w3-article-350670.html?_noredirect=1" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
                               </p>
-                              
                             </div>
                           </div>
 
@@ -181,7 +179,6 @@
                                 <b>Certificado de programa academico -CPA</b>: SI</br> 
                                 <a href="https://uchile.cl/presentacion/relaciones-internacionales/revalidacion-de-titulos-extranjeros/revalidacion-y-reconocimiento-en-la-universidad-de-chile" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
                               </p>
-                              
                             </div>
                           </div>
 
@@ -195,12 +192,167 @@
                                 <b>Certificado de programa academico -CPA</b>: SI</br> 
                                 <a href="https://www.gob.ec/senescyt/tramites/reconocimiento-general-titulos-extranjero" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
                               </p>
-                              
+                            </div>
+                          </div>
+
+                          <div class="col card border-0 h-100" >
+                            <div class="card-body">
+                              <h5 class="card-title">DOMINICANA </h5>
+                              <p class="card-text">
+                                <b>Entidad</b>: Ministerio de Educación Ciencia y Tecnología (Mescyt) Universidad Autónoma de Santo Domingo (UASD)</br>
+                                <b>Apostilla titulo</b>: SI</br> 
+                                <b>Apostilla certificado</b>: SI</br> 
+                                <b>Certificado de programa academico -CPA</b>: SI </br> 
+                                <a href="https://mescyt.gob.do/servicios/documentos-extranjeros/ https://uasd.edu.do/index.php/2018-01-23-20-50-42/revalida-o-reconocimiento-de-titulo" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                              </p>
+                            </div>
+                          </div>
+
+                          <div class="col card border-0 h-100" >
+                            <div class="card-body">
+                              <h5 class="card-title">BOLIVIA </h5>
+                              <p class="card-text">
+                                <b>Entidad</b>: Universidades Autónomas Bolivianas y CEUB (para programas que no existan en Bolivia)</br>
+                                <b>Apostilla titulo</b>: SI</br> 
+                                <b>Apostilla certificado</b>: SI</br> 
+                                <b>Certificado de programa academico -CPA</b>: NO</br> 
+                                <a href="http://www.ceub.edu.bo/academica/documentos/normas/04_Reglamento_Titulos_y_Grados.pdf" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                              </p>
+                            </div>
+                          </div>
+
+                          <div class="col card border-0 h-100" >
+                            <div class="card-body">
+                              <h5 class="card-title">ARGENTINA </h5>
+                              <p class="card-text">
+                                <b>Entidad</b>: cada universidad nacional cuenta con un apartado en su web, o en su defecto en sus oficinas presenciales.</br>
+                                <b>Apostilla titulo</b>: SI</br> 
+                                <b>Apostilla certificado</b>: SI</br> 
+                                <b>Certificado de programa academico -CPA</b>: SI</br> 
+                                <a href="https://www.gob.ec/senescyt/tramites/reconocimiento-general-titulos-extranjero" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                              </p>
+                            </div>
+                          </div>
+
+                          <div class="col card border-0 h-100" >
+                            <div class="card-body">
+                              <h5 class="card-title">EL SALVADOR </h5>
+                              <p class="card-text">
+                                <b>Entidad</b>: Ministerio de Educación</br>
+                                <b>Apostilla titulo</b>: SI</br> 
+                                <b>Apostilla certificado</b>: SI</br> 
+                                <b>Certificado de programa academico -CPA</b>: SI</br> 
+                                <a href="https://www.mined.gob.sv/servicios/incorporacion-de-titulos-de-educacion-superior-procedentes-del-extranjero/" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                              </p>
+                            </div>
+                          </div>
+
+                          <div class="col card border-0 h-100" >
+                            <div class="card-body">
+                              <h5 class="card-title">GUATEMALA  </h5>
+                              <p class="card-text">
+                                <b>Entidad</b>: Universidad San Carlos de Guatemala</br>
+                                <b>Apostilla titulo</b>: SI</br> 
+                                <b>Apostilla certificado</b>: De requerirse</br> 
+                                <b>Certificado de programa academico -CPA</b>: De requerirse</br> 
+                                <a href="https://portalregistro.usac.edu.gt/formulario_incorporado" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                              </p>
+                            </div>
+                          </div>
+
+                          <div class="col card border-0 h-100" >
+                            <div class="card-body">
+                              <h5 class="card-title">PARAGUAY </h5>
+                              <p class="card-text">
+                                <b>Entidad</b>: Ministerio de Educación y Ciencia (MEC)</br>
+                                <b>Apostilla titulo</b>: SI</br> 
+                                <b>Apostilla certificado</b>: SI</br> 
+                                <b>Certificado de programa academico -CPA</b>: SI</br> 
+                                <a href="http://www.cones.gov.py/nuevo-formulario-de-reconocimiento-de-titulos-extranjeros-con-importantes-ajustes-del-cones/" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                              </p>
+                            </div>
+                          </div>
+
+                          <div class="col card border-0 h-100" >
+                            <div class="card-body">
+                              <h5 class="card-title">PANAMA</h5>
+                              <p class="card-text">
+                                <b>Entidad</b>: Universidad de Panamá</br>
+                                <b>Apostilla titulo</b>: SI</br> 
+                                <b>Apostilla certificado</b>: SI</br> 
+                                <b>Certificado de programa academico -CPA</b>: SI</br> 
+                                <a href="https://www.panamatramita.gob.pa/es/tramite/solicitud-de-homologaci%C3%B3n-de-t%C3%ADtulos#:~:text=Homologar%20los%20t%C3%ADtulos%20de%20post,puedan%20tener%20validez%20en%20Panam%C3%A1.&text=Carta%20de%20solicitud%20en%20papel,y%20cualquier%20otra%20informaci%C3%B3n%20pertinente." class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                              </p>
+                            </div>
+                          </div>
+
+                          <div class="col card border-0 h-100" >
+                            <div class="card-body">
+                              <h5 class="card-title">URUGAY</h5>
+                              <p class="card-text">
+                                <b>Entidad</b>: Ministerio de Educación y Cultura - Dirección Nacional de Educación</br>
+                                <b>Apostilla titulo</b>: SI</br> 
+                                <b>Apostilla certificado</b>:</br> 
+                                <b>Certificado de programa academico -CPA</b>:</br> 
+                                <a href="https://www.gub.uy/tramites/solicitud-reconocimientos-revalidas-titulos-terciarios" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                              </p>
+                            </div>
+                          </div>
+
+                          <div class="col card border-0 h-100" >
+                            <div class="card-body">
+                              <h5 class="card-title">HONDURAS</h5>
+                              <p class="card-text">
+                                <b>Entidad</b>: Universidad Nacional Autónoma de Honduras</br>
+                                <b>Apostilla titulo</b>: SI</br> 
+                                <b>Apostilla certificado</b>: SI</br> 
+                                <b>Certificado de programa academico -CPA</b>:</br> 
+                                <a href="https://des.unah.edu.hn/servicio-al-usuario/tramites/validar-estudios-del-extranjero/" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                              </p>
+                            </div>
+                          </div>
+
+                          <div class="col card border-0 h-100" >
+                            <div class="card-body">
+                              <h5 class="card-title">NICARAGUA </h5>
+                              <p class="card-text">
+                                <b>Entidad</b>: Universidades Estatales, reconocimiento.  Universidad Nacional Autonoma de Nicaragua, incorporación y al ser estatal, reconocimiento</br>
+                                <b>Apostilla titulo</b>: SI</br> 
+                                <b>Apostilla certificado</b>:</br> 
+                                <b>Certificado de programa academico -CPA</b>:</br> 
+                                <a href="https://www.unan.edu.ni/wp-content/uploads/2019/03/unan-managua-reglamento-reconocimiento-incorporacion-profesionales-nicaragua.pdf" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                              </p>
+                            </div>
+                          </div>
+
+                          <div class="col card border-0 h-100" >
+                            <div class="card-body">
+                              <h5 class="card-title">COSTA RICA </h5>
+                              <p class="card-text">
+                                <b>Entidad</b>: "-CONARE (Consejo Nacional de Rectores) -Universidades miembros del Consejo Nacional de Rectores "</br>
+                                <b>Apostilla titulo</b>: SI</br> 
+                                <b>Apostilla certificado</b>: SI</br> 
+                                <b>Certificado de programa academico -CPA</b>:</br> 
+                                <a href="https://ore.conare.ac.cr/xhtml/index.xhtml" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                              </p>
+                            </div>
+                          </div>
+
+                          <div class="col card border-0 h-100" >
+                            <div class="card-body">
+                              <h5 class="card-title">ESPAÑA</h5>
+                              <p class="card-text">
+                                <b>Entidad</b>: Ministerio de Universidades</br>
+                                <b>Apostilla titulo</b>: SI</br> 
+                                <b>Apostilla certificado</b>: </br> 
+                                <b>Certificado de programa academico -CPA</b>: Si</br> 
+                                <a href="https://ore.conare.ac.cr/xhtml/index.xhtml" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                              </p>
                             </div>
                           </div>
 
                         </div>
-                  </div>
+                      </div>
                     </div>  
                   </div>
 
@@ -254,7 +406,7 @@
           <div class="procesoTitNacional row" id="procesotitnacional">                        
           </div>
         </div>
-        <!--Titulo intermedio-->
+        <!--Diploma intermedio-->
         <div class="bloque noactivo m-0" id="bloqueTituloInt">
           
           <div class="TituloYTexto" id="3">
@@ -275,7 +427,7 @@
                     y las 12 subsecuentes para el segundo. </br>
                     -Documentación física completa </br>
                     -Pago del documento. </br></br>
-                    Especificaciones de fotografía para el título intermedio: </br>
+                    Especificaciones de fotografía para el título Diploma: </br>
                 </div>
               
                   <img src="img/Fotos.jpg" class="py-2 img-fluid rounded-start" style="height: 35%;">
