--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -100,7 +100,6 @@
                           -Carta compromiso</br>
                           -Pago</br>
                           -Terminos y condiciones</br>
-                          -Cédula profesional digital</br>
                           -Título digital</br>
                           -Curriculum vitae</br>
                           -Carta motivos</br>
@@ -109,24 +108,36 @@
                           -Acta de nacimiento </br></br>
 
                           <strong>Documentación para Doctorado:</strong> </br></br>
-
+                          -Comprobante de domicilio</br>
+                          -CURP</br>
+                          -Identificación oficial</br>
+                          -Carta compromiso</br>
+                          -Pago</br>
+                          -Terminos y condiciones</br>
+                          -Constancia de ingles</br>
+                          -Título digital</br>
+                          -Curriculum vitae</br>
+                          -Carta motivos</br>
+                          -Solicitud de admisión</br>
+                          -Certificado total maestría</br>
+                          -Acta de nacimiento </br></br>
                         </div>
 
                         <div class="col">
                           <strong>Manuales de validación</strong></br>
                           <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_curp.pdf" target="_blank">¿Como validar un
                             Curp?</a>
-                          <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf" target="_blank">¿Como
+                          <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_acta.pdf" target="_blank">¿Como
                             validar un acta de nacimiento?</a>
-                          <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf" target="_blank">¿Como
+                          <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_certificado.pdf" target="_blank">¿Como
                             validar un certificado?</a>
-                          <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf" target="_blank">¿Como
+                          <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_cedula.pdf" target="_blank">¿Como
                             validar un titulo?</a>
-                          <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf" target="_blank">¿Como
+                          <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_cedula.pdf" target="_blank">¿Como
                             validar un cédula?</a>
-                          <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf" target="_blank">¿Como
+                          <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_comprobante.pdf" target="_blank">¿Como
                             validar un comprobante de docmicilio?</a>
-                          <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf" target="_blank">¿Como
+                          <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_ine.pdf" target="_blank">¿Como
                             validar una identificación oficial?</a>
                         </div>
                       </div>
@@ -223,25 +234,18 @@
 
                               <div class="col">
                                 <strong>Manuales de validación</strong></br>
-                                <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un certificado de licenciatura?</a>
-                                <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un certificado de bachillerato?</a>
-                                <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un certificado de Maestría?</a>
-                                <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar una carta compromiso?</a>
-                                <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
+                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Colombia/validar_certificado.pdf"
+                                  target="_blank">¿Como validar un antecedente academico?</a>
+                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Colombia/validar_identificacion.pdf"
+                                  target="_blank">¿Como validar una identificación?</a>
+                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Colombia/validar_comprobante.pdf"
+                                  target="_blank">¿Como validar un Comprobante de domicilio?</a>
+                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Colombia/validar_cartayanexo.pdf"
+                                  target="_blank">¿Como validar una carta compromiso y anexo?</a>
+                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Colombia/validar_cartamotivos.pdf"
                                   target="_blank">¿Como validar una carta motivos?</a>
-                                <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un carta curriculum?</a>
-                                <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar una constancia laboral?</a>
-                                <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un comprobante de domicilio</a>
-                                <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar una identificación</a>
-
+                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Colombia/validar-curriculum.pdf"
+                                  target="_blank">¿Como validar una carta curriculum?</a> 
                               </div>
                             </div>
                           </div>
@@ -838,12 +842,11 @@
                     </div>
 
                     <div class="col-md-4">
-                      <img style="height: 300px" src="Img/equicalencia.png">
+                      <img style="height: 300px" src="Img/revalidacion.png">
                     </div>
 
                   </div>
                 </div>
-
               </div>
 
               <!--Dictamen Tecnico-->
@@ -916,13 +919,12 @@
                     </div>
 
                     <div class="col-md-4">
-                      <img style="height: 300px" src="Img/equicalencia.png">
+                      <img style="height: 300px" src="">
                     </div>
 
 
                   </div>
                 </div>
-
               </div>
 
             </div>
