--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -67,7 +67,7 @@
 
 
                       <div class="col-md-4">                        
-                        
+                        <img style="height: 300px" src="Img/equicalencia.png">
                       </div>
                     
                       
@@ -106,7 +106,7 @@
                       </div>
 
                       <div class="col-md-4">
-                        
+                        <img style="height: 300px" src="Img/revalidacion.png">
                       </div>
                     
                     </div>
