--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -193,14 +193,14 @@
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#panelsStayOpen-collapseDocumentosColombia" aria-expanded="true"
                             aria-controls="panelsStayOpen-collapseDocumentosColombia">
-                            Documentos colombia
+                            Documentos Colombia
                           </button>
                         </h2>
                         <!--Contenido-->
                         <div id="panelsStayOpen-collapseDocumentosColombia" class="accordion-collapse collapse"
                           aria-labelledby="panelsStayOpen-DocumentosColombia">
                           <div class="accordion-body">
-                            <h2 class="text-center">Documentos colombia</h2>
+                            <h2 class="text-center">Documentos Colombia</h2>
                             <div class="row">
                               <div class="col">
 
