--- a/src/views/directorio.hbs
+++ b/src/views/directorio.hbs
@@ -13,6 +13,7 @@
             <div class="subcontenedor">
               <!--Directorio-->   
               <div class="bloque activo" id="bloquePreguntasFrecuentesTitulacion">
+                <!--
               <div class="buscador">
                 <h5> Buscar contacto</h5>
 
@@ -21,7 +22,7 @@
                 <ul id="resultado" class="p-0">
                 </ul>
               </div>
-
+              -->
               <h5>Departamentos</h5>
               <div class="row row row-cols-1 row-cols-xl-4 row-cols-md-2 g-4 my-1">
         
@@ -67,7 +68,7 @@
 
 
                 <div class="col card border-0" >
-                  <div class="card-body card-aviso" >
+                  <div class="card-body" >
                     <h5 class="card-title">Facturación</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Óscar Gonzalez Vega</h6>
                     <p class="card-text">
